--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ ctx.beginPath();
 		ctx.lineTo(242,242);
 		ctx.closePath();			
 
-		ctx.strokeStyle='#a8a3a3';
+		ctx.strokeStyle='black';
 		ctx.stroke();
 }
 	var y = 0;
